crates/wasm-cli/tests/snapshots/test__cli_registry_sync_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Force-sync the package index from the configured meta-registry

Usage: wasm registry sync [OPTIONS]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
