crates/wasm-cli/tests/snapshots/test__cli_registry_tags_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
List all available tags for a component

Usage: wasm registry tags [OPTIONS] <REFERENCE>

Arguments:
  <REFERENCE>  The reference to list tags for (e.g., ghcr.io/example/component or oci://ghcr.io/example/component)

Options:
      --signatures    Include signature tags (ending in .sig)
      --attestations  Include attestation tags (ending in .att)
  -h, --help          Print help
  -V, --version       Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
