crates/wasm-cli/tests/snapshots/test__cli_self_clean_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Clean up storage (remove all data, images, and metadata)

Usage: wasm self clean [OPTIONS]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
