crates/wasm-cli/tests/snapshots/test__init_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Create a new wasm component in an existing directory

Usage: wasm init [OPTIONS] [PATH]

Arguments:
  [PATH]
          The directory in which to create the wasm package files.
          
          Defaults to the current directory.
          
          [default: .]

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode

  -v, --verbose...
          Increase logging verbosity

  -q, --quiet...
          Decrease logging verbosity
